fixed overflow on about page

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -6,6 +6,7 @@
   padding: 16px 0;
 
   overflow-y: auto;
+  overflow-x: hidden;
 
   background-color: $raisin-black;
 
